<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".Photo"
    android:weightSum="1">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.39">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:text="@string/category_overview" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_pet_name"
                style="@style/EditorFieldStyle"
                android:layout_width="match_parent"
                android:layout_weight="4"
                android:layout_height="0dp"
                android:hint="@string/hint_pet_name"
                android:inputType="textCapWords" />

            <!-- Breed field -->
            <TextView
                android:id="@+id/reallocation"
                style="@style/EditorFieldStyle"
                android:layout_weight="3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="textCapWords" />
            <TextView
                android:id="@+id/reallocation2"
                style="@style/EditorFieldStyle"
                android:layout_weight="3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="textCapWords" />
        </LinearLayout>
    </LinearLayout>

    <!-- Gender category -->
    <LinearLayout
        android:id="@+id/container_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_gender" />

        <!-- Input field -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Gender drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_gender"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown" />
        </LinearLayout>
    </LinearLayout>

    <!-- Measurement category -->
    <LinearLayout
        android:id="@+id/container_measurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/category_time" />

        <!-- Weight field -->
        <TextView
            android:id="@+id/time"
            style="@style/EditorFieldStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:hint="@string/hint_pet_weight"
            android:inputType="number" />

        <!-- Units for weight (kg) -->
        <TextView
            android:id="@+id/label_weight_units"
            style="@style/EditorFieldStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="@string/unit_pet_weight" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="200dip"
            />

        <Button
            android:id="@+id/camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="開啟相機"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            />

        <Button
            android:id="@+id/photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="開啟相簿"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            />


    </LinearLayout>
</LinearLayout>